basic layout with hard-coded values

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weatherman</title>
-</head>
-<body>
-  
-</body>
-</html>
+<div style="text-align:center">
+  <h1>Weatherman</h1>
+  <div>Forecasting the weather. Saving lives.</div>
+  <h2>Current Weather</h2>
+  <app-current-weather></app-current-weather>
+</div>
