--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -13,7 +13,7 @@
   </div>
   <div fxLayout="row" fxLayoutAlign="center center">
     <div fxFlex="66%">
-      <img [src]='current.image'>
+      <img [src]="current.image" [alt]="current.description" />
     </div>
     <div fxFlex class="right mat-display-3 no-margin">
       {{ current.temperature | number:'1.0-0' }}<!--
