misc minor style changes to current weather display

--- a/src/app/current-weather/current-weather.component.css
+++ b/src/app/current-weather/current-weather.component.css
@@ -3,11 +3,13 @@
 }
 .no-margin {
   margin-bottom: 0;
+  margin-top: 0;
 }
 img {
   transform: scale(2, 2);
   -ms-transform: scale(2, 2);
   -webkit-transform: scale(2, 2);
+  margin-left: 10px;
 }
 .unit {
   vertical-align: super;
