--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -1,11 +1,11 @@
 <div *ngIf='current$ | async as current; else loading'>
   <div fxLayout="row">
-    <div fxFlex="90%" class="mat-title no-margin">
-      {{ current.city }}, {{ current.country }}&nbsp;
+    <div fxFlex="70%" class="mat-title no-margin">
+      {{ current.city | slice:0:15 }}, {{ current.country }}
     </div>
     <div fxFlex class="right mat-h3 no-margin">
-      {{ current.date | date:'EEEE' }}<br>
-      {{ current.date | date:'MMM d' }}<sup>{{ getOrdinal(current.date) }}</sup>
+      {{ current.date | date:'EEEE' }},
+      {{ current.date | date:'MMMM d' }}<sup>{{ getOrdinal(current.date) }}</sup>
     </div>
   </div>
   <div fxLayout="row" fxLayoutAlign="center center">
