--- a/src/styles.css
+++ b/src/styles.css
@@ -4,10 +4,16 @@ html, body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #fcfcfc;
 }
 .vertical-margin {
   margin-top: 16px;
   margin-bottom: 16px;
 }
+
+.mat-caption {
+  font-size: 15px;
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
