--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,11 @@
-html, body { height: 100%; }
+html,
+body {
+  height: 100%;
+}
 
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
   background-color: #fcfcfc;
 }
 
@@ -11,4 +14,6 @@ body {
   margin-bottom: 16px;
 }
 
-.mat-caption { font-size: 15px; }
+.mat-caption {
+  font-size: 15px;
+}
