--- a/src/weatherman-theme.scss
+++ b/src/weatherman-theme.scss
@@ -5,12 +5,14 @@ $weatherman-app-primary: mat-palette($mat-indigo, 400);
 $weatherman-app-accent: mat-palette($mat-teal, 300);
 $weatherman-app-warn: mat-palette($mat-red);
 
-$weatherman-app-theme: mat-light-theme((
-  color: (
-    primary: $weatherman-app-primary,
-    accent: $weatherman-app-accent,
-    warn: $weatherman-app-warn,
+$weatherman-app-theme: mat-light-theme(
+  (
+    color: (
+      primary: $weatherman-app-primary,
+      accent: $weatherman-app-accent,
+      warn: $weatherman-app-warn,
+    ),
   )
-));
+);
 
 @include angular-material-theme($weatherman-app-theme);
