--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -15,7 +15,7 @@
     <div fxFlex class="right mat-display-3 no-margin">
       {{ current.temperature | number:'1.0-0' }}
       <!--
-      remove blank space added by newline span element by adding this comment
+      Remove blank space added by newline span element by adding this comment
       --><span class="unit mat-display-1">&#8451;</span>
     </div>
   </div>
