--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div>
   <mat-toolbar color="primary" style="font-size: 22px;">
-    <span>Weatherman</span>
+    <span>Weatherman&nbsp;&nbsp;<span class="smaller">(v1.0.0)</span></span>
   </mat-toolbar>
   <div fxLayoutAlign="center">
-    <div class="mat-caption vertical-margin">
+    <div class="mat-caption oblique vertical-margin">
       Reporting the weather. Saving lives.
     </div>
   </div>
@@ -12,10 +12,10 @@
   </div>
   <div fxLayout="row">
     <div fxFlex></div>
-    <mat-card fxFlex="300px">
+    <mat-card fxFlex="400px">
       <mat-card-header>
         <mat-card-title>
-          <div class="mat-headline">Current Weather...</div>
+          <div class="mat-headline primary-color oblique">Current weather in...</div>
         </mat-card-title>
       </mat-card-header>
       <mat-card-content>
