--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,20 @@
 <div>
-  <mat-toolbar color="primary" style="font-size: 22px;">
-    <span>Weatherman&nbsp;&nbsp;<span class="smaller">(v1.0.0)</span></span>
+  <mat-toolbar color="primary" class="upper">
+    <div class="title-banner">Weatherman</div>
+    <button (click)="onClickVersion()">version 1.1.0</button>
   </mat-toolbar>
-  <div fxLayoutAlign="center">
-    <div class="mat-caption oblique vertical-margin">
-      Reporting the weather. Saving lives.
-    </div>
-  </div>
+  <mat-toolbar color="accent" class="lower">
+    <span>Reporting the weather. &nbsp;Saving lives.</span>
+  </mat-toolbar>
   <div fxLayoutAlign="center">
     <app-city-search></app-city-search>
   </div>
   <div fxLayout="row">
     <div fxFlex></div>
-    <mat-card fxFlex="400px">
+    <mat-card fxFlex="300px" fxFlex.gt-sm="450px">
       <mat-card-header>
         <mat-card-title>
-          <div class="mat-headline primary-color oblique">Current weather in...</div>
+          <div class="mat-headline primary-color oblique">Current Weather</div>
         </mat-card-title>
       </mat-card-header>
       <mat-card-content>
