--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div>
   <mat-toolbar color="primary" class="upper">
     <div class="title-banner">Weatherman</div>
-    <button (click)="onClickVersion()">version 1.1.0</button>
+    <button (click)="onClickVersion()">
+      version 1.1.0
+    </button>
   </mat-toolbar>
   <mat-toolbar color="accent" class="lower">
     <span>Reporting the weather. &nbsp;Saving lives.</span>
